work in progress for pcap-monitor

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -378,7 +378,7 @@ services:
     restart: "no"
     stdin_open: false
     tty: true
-    hostname: pcapmon
+    hostname: pcap-monitor
     networks:
       - default
     env_file:
