--- a/kubernetes/16-netbox-redis-cache.yml
+++ b/kubernetes/16-netbox-redis-cache.yml
@@ -33,6 +33,8 @@ spec:
         imagePullPolicy: Always
         stdin: false
         tty: true
+        command: ["sh"]
+        args: ["-c", "redis-server --requirepass $(REDIS_PASSWORD)"]
         ports:
           - containerPort: 6379
         envFrom:
@@ -47,6 +49,7 @@ spec:
         env:
           - name: VIRTUAL_HOST
             value: "netbox-redis-cache.malcolm.local"
+        # TODO: livenessProbe
         volumeMounts:
           - mountPath: /var/local/ca-trust/configmap
             name: netbox-redis-cache-var-local-catrust-volume
