--- a/kubernetes/17-netbox-postgres.yml
+++ b/kubernetes/17-netbox-postgres.yml
@@ -47,7 +47,17 @@ spec:
         env:
           - name: VIRTUAL_HOST
             value: "netbox-postgres.malcolm.local"
-        # TODO: livenessProbe
+        livenessProbe:
+          exec:
+            command:
+            - bash
+            - -c
+            - "[[ $(NETBOX_POSTGRES_DISABLED) == 'true' ]] || pg_isready -d $(POSTGRES_DB) -U $(POSTGRES_USER)"
+          initialDelaySeconds: 45
+          periodSeconds: 60
+          timeoutSeconds: 15
+          successThreshold: 1
+          failureThreshold: 10
         volumeMounts:
           - mountPath: /var/local/ca-trust/configmap
             name: netbox-postgres-var-local-catrust-volume
