--- a/kubernetes/23-freq.yml
+++ b/kubernetes/23-freq.yml
@@ -45,6 +45,18 @@ spec:
         env:
           - name: VIRTUAL_HOST
             value: "freq.malcolm.local"
+        livenessProbe:
+          exec:
+            command:
+            - curl
+            - --silent
+            - --fail
+            - http://localhost:10004
+          initialDelaySeconds: 60
+          periodSeconds: 30
+          timeoutSeconds: 15
+          successThreshold: 1
+          failureThreshold: 10
         volumeMounts:
           - mountPath: /var/local/ca-trust/configmap
             name: freq-var-local-catrust-volume
