--- a/kubernetes/15-netbox-redis.yml
+++ b/kubernetes/15-netbox-redis.yml
@@ -52,9 +52,9 @@ spec:
         livenessProbe:
           exec:
             command:
-            - bash
+            - sh
             - -c
-            - "[[ $(NETBOX_REDIS_DISABLED) == 'true' ]] || ( pidof redis-server || exit 1 )"
+            - "pidof redis-server || pidof goStatic || exit 1"
           initialDelaySeconds: 45
           periodSeconds: 60
           timeoutSeconds: 15
