--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -69,6 +69,17 @@ http {
     server file-monitor:8440;
   }
 
+  # health check ("here I am") without authentication
+  server {
+    listen 8443;
+    include /etc/nginx/nginx_ssl_config.conf;
+
+    location / {
+      add_header Content-Type text/plain;
+      return 200 'Malcolm\n';
+    }
+  }
+
   # htadmin (htpasswd/user management)
   server {
     listen 488;
