--- a/nginx/nginx_readonly.conf
+++ b/nginx/nginx_readonly.conf
@@ -53,6 +53,17 @@ http {
     server file-monitor:8440;
   }
 
+  # health check ("here I am") without authentication
+  server {
+    listen 8443;
+    include /etc/nginx/nginx_ssl_config.conf;
+
+    location / {
+      add_header Content-Type text/plain;
+      return 200 'Malcolm\n';
+    }
+  }
+
   # Main web interface
   server {
     listen 443;
