--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -445,7 +445,7 @@ services:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./htadmin/config.ini:/var/www/htadmin/config/config.ini:rw
       - ./htadmin/metadata:/var/www/htadmin/config/metadata:rw
-      - ./nginx/htpasswd:/var/www/htadmin/config/htpasswd:rw
+      - ./nginx/htpasswd:/var/www/htadmin/config/auth/htpasswd:rw
     healthcheck:
       test: ["CMD", "curl", "--silent", "--fail", "http://localhost"]
       interval: 60s
@@ -639,7 +639,7 @@ services:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - nginx-log-path:/var/log/nginx:rw
       - ./nginx/nginx_ldap.conf:/etc/nginx/nginx_ldap.conf:ro
-      - ./nginx/htpasswd:/etc/nginx/htpasswd:ro
+      - ./nginx/htpasswd:/etc/nginx/auth/htpasswd:ro
       - ./nginx/certs:/etc/nginx/certs:ro
       - ./nginx/certs/dhparam.pem:/etc/nginx/dhparam/dhparam.pem:ro
     healthcheck:
@@ -649,15 +649,15 @@ services:
       retries: 3
       start_period: 120s
     labels:
-      traefik.enable: "false"
-      # traefik.http.routers.osmalcolm.rule: 'Host(`opensearch.malcolm.example.org`)'
-      # traefik.http.routers.osmalcolm.entrypoints: 'websecure'
-      # traefik.http.routers.osmalcolm.tls.certresolver: 'myresolver'
+      traefik.enable: 'false'
+      # traefik.http.routers.osmalcolm.rule: 'Host(``)'
+      # traefik.http.routers.osmalcolm.entrypoints: ''
+      # traefik.http.routers.osmalcolm.tls.certresolver: ''
       # traefik.http.routers.osmalcolm.service: 'osmalcolm'
       # traefik.http.services.osmalcolm.loadbalancer.server.port: '9200'
-      # traefik.http.routers.malcolm.rule: 'Host(`malcolm.example.org`)'
-      # traefik.http.routers.malcolm.entrypoints: 'websecure'
-      # traefik.http.routers.malcolm.tls.certresolver: 'myresolver'
+      # traefik.http.routers.malcolm.rule: 'Host(``)'
+      # traefik.http.routers.malcolm.entrypoints: ''
+      # traefik.http.routers.malcolm.tls.certresolver: ''
       # traefik.http.routers.malcolm.service: 'malcolm'
       # traefik.http.services.malcolm.loadbalancer.server.port: '443'
 
