work in progress for moving inotify to watchdog, see idaholab/Malcolm#168

--- a/config/upload-common.env.example
+++ b/config/upload-common.env.example
@@ -10,6 +10,10 @@ PCAP_PIPELINE_DEBUG=false
 PCAP_PIPELINE_DEBUG_EXTRA=false
 # Whether or not PCAP files extant in ./pcap/ will be ignored on startup
 PCAP_PIPELINE_IGNORE_PREEXISTING=false
+# Whether or not to use polling vs. native inotify API to watch for files
+PCAP_PIPELINE_POLLING=false
+# When polling, seconds of inactivity to assume a file is closed and ready for processing
+PCAP_PIPELINE_POLLING_ASSUME_CLOSED_SEC=10
 # 'pcap-monitor' to match the name of the container providing the uploaded/captured PCAP file
 #   monitoring service
 PCAP_MONITOR_HOST=pcap-monitor
