--- a/pcap-monitor/supervisord.conf
+++ b/pcap-monitor/supervisord.conf
@@ -37,6 +37,8 @@ command=python3 /usr/local/bin/pcap_watcher.py
   --opensearch-wait
   --node "%(ENV_PCAP_NODE_NAME)s"
   --ignore-existing "%(ENV_PCAP_PIPELINE_IGNORE_PREEXISTING)s"
+  --polling "%(ENV_PCAP_PIPELINE_POLLING)s"
+  --closed-sec %(ENV_PCAP_PIPELINE_POLLING_ASSUME_CLOSED_SEC)s
   --start-sleep 60
   --directory "%(ENV_PCAP_PATH)s"/processed
 user=%(ENV_PUSER)s
