--- a/.github/workflows/file-monitor-build-and-push-ghcr.yml
+++ b/.github/workflows/file-monitor-build-and-push-ghcr.yml
@@ -10,6 +10,8 @@ on:
       - 'file-monitor/**'
       - 'Dockerfiles/file-monitor.Dockerfile'
       - 'shared/bin/*'
+      - '!shared/bin/configure-interfaces.py'
+      - '!shared/bin/configure-capture.py'
       - '.trigger_workflow_build'
   workflow_dispatch:
   repository_dispatch:
